Max length Operator bl_idname is truncated 1 character #101803

Closed
opened 2022-10-13 16:59:33 +02:00 by Mysteryem · 6 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.59

Blender Version
Broken: version: 3.3.1, branch: master, commit date: 2022-10-04 18:35, hash: b292cfe5a9
Worked:
I could not find a working version, 2.79 and 2.80 crash, which I'm guessing is because they lack the changes from https:*developer.blender.org/rB4e9aadac5e7756b0bf3d313ec31cc85770347b8a that fixed https:*developer.blender.org/T70000 and 2.81.16 has the same issues as 3.3.1

Short description of error
Attempting to register an Operator with a too long bl_idname raises a RuntimeError with message stating that the maximum length is 61 characters:

RuntimeError: Error: Registering operator class: 'MaxLengthOperator', invalid bl_idname 'op_module.a_b_c_d_e_f_g_h_i_j_k_l_m_n_o_p_q_r_s_t_u_v_w_x_y_zzz', is too long, maximum length is 61

However, if you register an Operator with a maximum length bl_idname, the last character is silently truncated from the string.
This puts the Operator in an inconsistently registered state, whereby it is accessible as bpy.ops.<bl_idname_61_chars>, the actual bl_idname of the operator does not match, repr(bpy.ops.<bl_idname_61_chars>) fails:

Error: Python: Traceback (most recent call last):
  File "\Text", line 33, in <module>
  File "<string>", line 1, in <module>
  File "D:\Program Files (x86)\Steam\steamapps\common\Blender\3.3\scripts\modules\bpy\ops.py", line 129, in __repr__
    return _op_as_string(self.idname())
AttributeError: _bpy.ops.as_string: operator "OP_MODULE_OT_a_b_c_d_e_f_g_h_i_j_k_l_m_n_o_p_q_r_s_t_u_v_w_x_y_z" could not be found

, dir(bpy.ops) includes the full bl_idname and dir(bpy.ops.<operator module>) does not contain the name of the operator.

The max length check that states the maximum length as being 61 appears to be in WM_operator_py_idname_ok_or_report in source/blender/windowmanager/intern/wm_operators.c

Exact steps for others to reproduce the error
Create a new text, copy and paste and then run this script:

import bpy

operator_module = "op_module"
operator_name = "a_b_c_d_e_f_g_h_i_j_k_l_m_n_o_p_q_r_s_t_u_v_w_x_y_z"
bl_idname_61_chars = operator_module + "." + operator_name
assert(len(bl_idname_61_chars) == 61)

class MaxLengthOperator(bpy.types.Operator):
    bl_idname = bl_idname_61_chars
    bl_label = "Test Operator"
    
    def execute(self, context):
        print("\nExpected self.bl_idname:")
        print(bl_idname_61_chars)
        # Prints "op_module.a_b_c_d_e_f_g_h_i_j_k_l_m_n_o_p_q_r_s_t_u_v_w_x_y_", truncating the "z" on the end
        print("\nActual self.bl_idname:")
        print(self.bl_idname)
        assert(self.bl_idname == bl_idname_61_chars)
        return {'FINISHED'}

bpy.utils.register_class(MaxLengthOperator)

registered_module = getattr(bpy.ops, operator_module)
registered_operator = getattr(registered_module, operator_name)

# Raises AssertionError
registered_operator()

- _bpy.ops.as_string in scripts\modules\bpy\ops.py fails to find the operator
- Raises AttributeError
repr(registered_operator)

- The operator does not get returned by the module's __dir__
- Raises AssertionError
assert(operator_name in dir(registered_module))

- The full bl_idname ends up in dir(bpy.ops) instead
- Raises AssertionError
assert(bl_idname_61_chars not in dir(bpy.ops))
**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.59 **Blender Version** Broken: version: 3.3.1, branch: master, commit date: 2022-10-04 18:35, hash: `b292cfe5a9` Worked: I could not find a working version, 2.79 and 2.80 crash, which I'm guessing is because they lack the changes from https:*developer.blender.org/rB4e9aadac5e7756b0bf3d313ec31cc85770347b8a that fixed https:*developer.blender.org/T70000 and 2.81.16 has the same issues as 3.3.1 **Short description of error** Attempting to register an Operator with a too long bl_idname raises a RuntimeError with message stating that the maximum length is 61 characters: ``` RuntimeError: Error: Registering operator class: 'MaxLengthOperator', invalid bl_idname 'op_module.a_b_c_d_e_f_g_h_i_j_k_l_m_n_o_p_q_r_s_t_u_v_w_x_y_zzz', is too long, maximum length is 61 ``` However, if you register an Operator with a maximum length bl_idname, the last character is silently truncated from the string. This puts the Operator in an inconsistently registered state, whereby it is accessible as `bpy.ops.<bl_idname_61_chars>`, the actual bl_idname of the operator does not match, `repr(bpy.ops.<bl_idname_61_chars>)` fails: ``` Error: Python: Traceback (most recent call last): File "\Text", line 33, in <module> File "<string>", line 1, in <module> File "D:\Program Files (x86)\Steam\steamapps\common\Blender\3.3\scripts\modules\bpy\ops.py", line 129, in __repr__ return _op_as_string(self.idname()) AttributeError: _bpy.ops.as_string: operator "OP_MODULE_OT_a_b_c_d_e_f_g_h_i_j_k_l_m_n_o_p_q_r_s_t_u_v_w_x_y_z" could not be found ``` , `dir(bpy.ops)` includes the full bl_idname and `dir(bpy.ops.<operator module>)` does not contain the name of the operator. The max length check that states the maximum length as being 61 appears to be in WM_operator_py_idname_ok_or_report in source/blender/windowmanager/intern/wm_operators.c **Exact steps for others to reproduce the error** Create a new text, copy and paste and then run this script: ``` import bpy operator_module = "op_module" operator_name = "a_b_c_d_e_f_g_h_i_j_k_l_m_n_o_p_q_r_s_t_u_v_w_x_y_z" bl_idname_61_chars = operator_module + "." + operator_name assert(len(bl_idname_61_chars) == 61) class MaxLengthOperator(bpy.types.Operator): bl_idname = bl_idname_61_chars bl_label = "Test Operator" def execute(self, context): print("\nExpected self.bl_idname:") print(bl_idname_61_chars) # Prints "op_module.a_b_c_d_e_f_g_h_i_j_k_l_m_n_o_p_q_r_s_t_u_v_w_x_y_", truncating the "z" on the end print("\nActual self.bl_idname:") print(self.bl_idname) assert(self.bl_idname == bl_idname_61_chars) return {'FINISHED'} bpy.utils.register_class(MaxLengthOperator) registered_module = getattr(bpy.ops, operator_module) registered_operator = getattr(registered_module, operator_name) # Raises AssertionError registered_operator() - _bpy.ops.as_string in scripts\modules\bpy\ops.py fails to find the operator - Raises AttributeError repr(registered_operator) - The operator does not get returned by the module's __dir__ - Raises AssertionError assert(operator_name in dir(registered_module)) - The full bl_idname ends up in dir(bpy.ops) instead - Raises AssertionError assert(bl_idname_61_chars not in dir(bpy.ops)) ```
Author

Added subscriber: @Mysteryem-2

Added subscriber: @Mysteryem-2

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm the problem.
Maybe the limit should be 60 instead of 61.
Adding the #core team to take a look (since the problem occurs in rna_Operator_register and the core team deals with the DNA & RNA area).

I can confirm the problem. Maybe the limit should be 60 instead of 61. Adding the #core team to take a look (since the problem occurs in `rna_Operator_register` and the core team deals with the `DNA & RNA` area).

This issue was referenced by 9e77f5f17f

This issue was referenced by 9e77f5f17fcadf12316ed855ac47abf32592d84f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2022-10-14 18:38:08 +02:00
Bastien Montagne added this to the Core project 2023-02-09 15:43:11 +01:00
Bastien Montagne removed this from the Core project 2023-02-09 18:19:07 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101803
No description provided.